# TextKGCData

./: .gitignore  404.html  index.html  objects.inv  readme.md  sitemap.xml  test_refactor.py
.github/workflows/: doc.yml
adding_datasets/: index.html
blog/: index.html
fb15k237_example/: index.html
search/: search_index.json
standardised_tkg/: index.html
text-kgc-data-docs/: mkdocs.yml  requirements.txt
text-kgc-data-docs/docs/: adding_datasets.md  fb15k237_example.md  index.md  standardised_tkg.md  wikidata5m_example.md  wn18rr_example.md
text_kgc_data_proj/: pyproject.toml  test_truncation_refactor.py
text_kgc_data_proj/examples/: truncation_examples.py
text_kgc_data_proj/text_kgc_data/: __init__.py  cli.py  download_data.py  helpers.py  io.py  models.py  preprocessors.py  processors.py  tkg_io.py  truncation.py
text_kgc_data_proj/text_kgc_data/datasets/: __init__.py  fb15k237.py  wikidata5m.py  wn18rr.py
text_kgc_data_proj/text_kgc_data/standardise_tkg_files/: standardise_wikidata5m.py  standardise_wn18rr.py
wikidata5m_example/: index.html
wn18rr_example/: index.html
