[project]
name = "text_kgc_data"
version = "0.1.0"
description = "A package for managing text based kgc data."
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
dependencies = [
    "pandas>=1.3.0",
    "numpy>=1.21.0",
    'tqdm',
    'beartype'
]

[project.urls]
Homepage = "https://github.com/yourusername/deer_dataset_manager"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project.scripts]
tkg = "text_kgc_data.cli:none"