[project]
name = "text_kgc_data"
version = "0.2.0"
description = "A functional toolkit for text-based knowledge graph completion data processing."
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
dependencies = [
    "pandas>=1.3.0",
    "numpy>=1.21.0",
    "tqdm",
    "beartype",
    "typer"
]

[project.urls]
Homepage = "https://github.com/yourusername/deer_dataset_manager"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project.scripts]
text-kgc = "text_kgc_data.cli:main"